added swaggerdocs for forgot password and change password
